# src/main/java/com/plip/topic/application/port/in/dto/CreateTopicRequestDto.java
@@ -4,7 +4,6 @@ import lombok.Builder;
 import lombok.Getter;
 
 import java.time.LocalDateTime;
-import java.util.List;
 import java.util.UUID;
 
 @Getter
@@ -15,5 +14,4 @@ public class CreateTopicRequestDto {
 	private final UUID creatorUuid;
 	private final String title;
 	private final LocalDateTime startAt;
-	private final List<UUID> videoUuids;
 }
